--- a/docs/software/controls/system-control/pid.mdx
+++ b/docs/software/controls/system-control/pid.mdx
@@ -114,7 +114,7 @@ Tuning a PID controller involves adjusting the gain constants (Kp, Ki, Kd) to ac
 Be very careful when tuning a PID controller on a live system. Aggressive tuning can lead to instability, oscillations, or even damage to the system. Always start with conservative values and gradually adjust them while monitoring the system's response. If you notice any erratic behavior, immediately stop and reassess your tuning approach.
 :::
 
-0. If you have a feed forward component, set it up first to provide a good baseline for your system. See [Tuning a Feed Forward Controller](./feed-fwd.mdx#tuning-a-feed-forward-controller) for more information.
+0. **Feed Forward**: If you have a feed forward component, set it up first to provide a good baseline for your system. See [Tuning a Feed Forward Controller](./feed-fwd.mdx#tuning-a-feed-forward-controller) for more information.
 1. **Start with Kp**: Begin by setting Ki and Kd to zero. Increase Kp until the system responds quickly to changes in the setpoint but does not oscillate excessively. Start with very small values and gradually increase. Very small depends on the units of your system, but **0.0001** is a safe bet.
 2. **Walk Up Kp**: You will likely not get a system response with such a small Kp. A good approach is to increase Kp by a factor of 10 until you see a response. Once you see a response, carefully increase Kp in smaller increments until you reach a point where the system starts to oscillate around the setpoint.
 3. **Add Kd**: Once you have a good Kp value, start increasing Kd to help dampen any oscillations. Increase Kd until the system stabilizes and reaches the setpoint without overshooting too much. A good starting point for Kd is typically around 10% of your Kp value. As you add more Kd you may be able to increase Kp a bit more for a more responsive system.
