--- a/docs/software/training/control-theory.mdx
+++ b/docs/software/training/control-theory.mdx
@@ -16,7 +16,9 @@ Control theory is a branch of engineering and mathematics that deals with the be
 - [Arm Tuning Exercise](https://docs.wpilib.org/en/stable/docs/software/advanced-controls/introduction/tuning-vertical-arm.html)
 - Tune the flywheel for velocity control on the Onboarding Bot
     - Tune in Simulation first to get a rough estimation
-    - Make sure you system measurements like MOI and radius are close to the real robot
+    - Make sure your system measurements like MOI and radius are close to the real robot
+        - Wheel Radius: 3.5 in
+        - Wheel Mass: 2.3 kg
     - Once you have tuned in simulation try final values on the robot
 
 # Related Documentation
@@ -25,3 +27,4 @@ Control theory is a branch of engineering and mathematics that deals with the be
 - [Feed Forward](../controls/system-control/feed-fwd.mdx): Description of a Feed Forward system control approach
 - [Bang Bang Controller](../controls/system-control/bang-bang.mdx): Description of a Bang Bang system control approach
 - [PID Controller](../controls/system-control/pid.mdx): Description of a PID system control approach
+
