add CV section & fill in auto

--- a/docs/software/training/autonomous.mdx
+++ b/docs/software/training/autonomous.mdx
@@ -7,3 +7,18 @@ unlisted: true
 ---
 
 # WIP
+
+# Autonomous
+Autonomous programming is a critical aspect of FRC robots, as it covers the first 15 seconds of the match where the robot operates without human intervention. During this period,
+the robot must perform a series of pre-programmed actions to score points, navigate the field, and interact with game pieces. Effective autonomous routines can provide a significant 
+advantage in matches, as they allow the robot to maximize the points scored during this crucial phase where activity scores are higher.
+
+# Presentation 
+TBD
+
+# Excercises
+- TBD
+
+# Related Documentation
+## Autonomous
+- TBD
