--- a/docs/software/training/computer-vision.mdx
+++ b/docs/software/training/computer-vision.mdx
@@ -3,9 +3,21 @@ title: Computer Vision
 description: An overview of computer vision techniques used in FRC robots. This includes image processing, object detection, and how to implement vision systems on our robots.
 hide_table_of_contents: true
 sidebar_position: 10
-unlisted: true
 ---
 
-# WIP
+# Computer Vision
+Computer vision is a subset of algorthims and techniques that allow computers to interpret and understand visual information from the world, such as images and videos. The main goal is to develop methods to detect and track objects, recognize patterns, and extract meaningful information from visual data.
+In the context of FRC, computer vision is often used to help robots identify and interact with game pieces, and or field elements. It helps the robots better understand the environment around them, enabling more autonomous and intelligent behavior.
 
+# Presentation
 <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vT5JviDrAQzDRszoERR-5dwX_16MijoJpQVzg5lahy-vghUnZhSWAVGFyDAmUZmcG9T1XTwW7MDodLP/pubembed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+
+# Excercises
+- **N/A**
+
+# Related Documentation
+## Hardware
+- [Nvidia Jetson Vision Computer](./hardware/jetsons.mdx)
+## Vision
+- [Object Detection](./vision/obj_det.mdx)
+- [April Tags](.vision/apriltags.mdx)
